--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "dev": "ts-node-dev --exit-child src/server.ts"
+  },
   "dependencies": {
-    "socket.io": "^2.3.0"
+    "socket.io": "^4.6.0"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
